--- a/templates/rc.conf.d/filebeat.j2
+++ b/templates/rc.conf.d/filebeat.j2
@@ -1,1 +1,1 @@
-filebeat_config="-path.home /var/db/beats/filebeat -path.config /usr/local/etc/filebeat"
+filebeat_config="-path.home /var/db/beats/filebeat -path.config {{ filebeat.prefix.config }}"
